--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 /**********TAG SELECTOR*******/
 body{
 text-align: center;
+color: #40514E;
 margin: 0;
 font-family: 'Merriweather',serif;
 
@@ -11,20 +12,41 @@ h1{
 font-size: 5.625rem;
 margin: 50px auto 0 auto;
 font-family: 'Sacramento',cursive;
+color:#66BFBF;
+line-height: 2;
 margin-top: 50px;
 }
 
+p{
+    line-height: 2;
+}
 
 h2{ 
    
     font-family: 'Montserrat',sans-serif;
     font-size: 2.5rem;
+    font-weight: normal;
+    color:#66BFBF;
 }
 
 h3{ 
-   
+    color: #11999E;
     font-family: 'Montserrat',sans-serif;
 }
+
+a{
+    color: #11999E;
+}
+
+hr{
+    border-style: none;
+    border-top-style: dotted;
+    margin: 50px auto 50px auto;
+    color: #EAF6F6;
+    border-width: 5px;
+    width: 2%;
+}
+
 
 
 /*******CLASS  SELECTORS******/
@@ -37,10 +59,13 @@ h3{
 }
 
 .bottom-container{
-
+    padding: 50px;
+    background-color:#66BFBF ;
 }
 
 .middle-container{
+    margin: 8% auto 50px auto;
+ 
 }
 
 .pro{
@@ -62,6 +87,80 @@ left: 500px;
 right: 10px;
 
 }
+
+.skill-row{
+    text-align: left;
+    width: 50%;
+    margin: 100px auto 100px auto;
+
+
+}
+
+.skillimg1{
+    float: right;
+    width: 25%;
+    margin-right: 30px;
+}
+
+
+.skillimg{
+    float: left;
+    width: 25%;
+    margin-right: 30px;
+}
+
+.okey{
+    clear: left;
+}
+
+.intro{
+    color: #40514E;
+    font-weight: bold;
+}
+
+
+.btn {
+    background:  #11cdd4;
+    background-image: -webkit-linear-gradient(top,  #11cdd4,  #11999e);
+    background-image: -moz-linear-gradient(top,  #11cdd4,  #11999e);
+    background-image: -ms-linear-gradient(top,  #11cdd4,  #11999e);
+    background-image: -o-linear-gradient(top,  #11cdd4,  #11999e);
+    background-image: linear-gradient(to bottom,  #11cdd4,  #11999e);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30e3cb;
+    background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+    background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+    text-decoration: none;
+  }
+
+
+  .footer-link{
+    color: #11999E;
+    font-family: 'Montserrat',sans-serif;
+    font-weight: bold;
+    margin: 10px;
+    text-decoration: none;
+  }
+
+  .credits{
+    color: #EAF6F6;
+    font-family: serif;
+    margin-top: 40px;
+  }
+
 
 
 
